# swagger.yaml
@@ -54,7 +54,7 @@ paths:
         201:
           description: Created
           schema:
-            $ref: '#/definitions/User'
+            $ref: '#/definitions/UserAuthorized'
   /api/profile/authorized:
     get:
       tags:
@@ -85,7 +85,7 @@ paths:
           description: Ok
           schema:
             $ref: '#/definitions/User'
-    put:
+    patch:
       tags:
         - profile
       summary: Изменить профиль
@@ -223,7 +223,7 @@ paths:
     get:
       tags:
         - order
-      summary: Получить все заказы
+      summary: Получить все актуальные заказы
       description: Получить все актуальные заказы
       responses:
         200:
@@ -248,7 +248,7 @@ paths:
           description: Ok
           schema:
             $ref: '#/definitions/Order'
-    put:
+    patch:
       tags:
         - order
       summary: Изменить заказ
@@ -286,6 +286,20 @@ paths:
       responses:
         200:
           description: Ok
+  /api/order/{id}/close:
+    delete:
+      tags:
+        - order
+      summary: Пометить заказ как выполненный
+      description: Пометить заказ как выполненный и перенести в архив
+      parameters:
+        - name: id
+          in: path
+          type: number
+          required: true
+      responses:
+        200:
+          description: Ok
   /api/order/{id}/response:
     post:
       tags:
@@ -309,7 +323,7 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/Response'
-    put:
+    patch:
       tags:
         - order
       summary: Изменить отклик
@@ -367,8 +381,26 @@ paths:
     get:
       tags:
         - order
-      summary: Все заказы пользователя
-      description: Получить все заказы текущего пользователя
+      summary: Все актуальные заказы пользователя
+      description: Получить все актуальные заказы текущего пользователя
+      parameters:
+        - name: id
+          in: path
+          description: индентификатор пользователя
+          required: true
+          type: number
+          format: uint64
+      responses:
+        200:
+          description: Ok
+          schema:
+            $ref: '#/definitions/Orders'
+  /api/order/profile/{id}/archive:
+    get:
+      tags:
+        - order
+      summary: Все архивные заказы пользователя
+      description: Получить все архивные заказы текущего пользователя
       parameters:
         - name: id
           in: path
@@ -424,6 +456,17 @@ paths:
       tags:
         - order
       summary: Поиск заказов
+      description: Найти все заказы по ключевым словам
+      parameters:
+        - name: search
+          in: body
+          schema:
+            $ref: '#/definitions/SearchOrders'
+      responses:
+        200:
+          description: Ok
+          schema:
+            $ref: '#/definitions/Orders'
   /api/vacancy:
     post:
       tags:
@@ -445,8 +488,8 @@ paths:
     get:
       tags:
         - vacancy
-      summary: Получить все вакансии
-      description: Получить все актуальные вакансии
+      summary: Получить все актуальные вакансии
+      description: Получить актуальные все актуальные вакансии
       responses:
         200:
           description: Ok
@@ -469,7 +512,7 @@ paths:
           description: Ok
           schema:
             $ref: '#/definitions/Vacancy'
-    put:
+    patch:
       tags:
         - vacancy
       summary: Изменить вакансию
@@ -507,6 +550,20 @@ paths:
       responses:
         200:
           description: Ok
+  /api/vacancy/{id}/close:
+    delete:
+      tags:
+        - vacancy
+      summary: пометить вакансию как выполненную
+      description: пометить вакансию как выполненную и перенести в архив
+      parameters:
+        - name: id
+          in: path
+          type: number
+          required: true
+      responses:
+        200:
+          description: Ok
   /api/vacancy/{id}/response:
     post:
       tags:
@@ -530,9 +587,9 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/Response'
-    put:
+    patch:
       tags:
-      - vacancy
+        - vacancy
       summary: Изменить отклик
       description: Изменить отклик на вакансию
       parameters:
@@ -667,7 +724,6 @@ definitions:
       about:
         type: string
         example: "Я пожилая няшка"
-      # TODO: добавить write only
       password:
         type: string
         example: "2281488322"
@@ -807,6 +863,12 @@ definitions:
     type: array
     items:
       $ref: '#/definitions/Order'
+  SearchOrders:
+    type: object
+    properties:
+      keyword:
+        type: string
+        example: "Адаптивная верстка"
   Response:
     type: object
     properties:
@@ -1000,6 +1062,18 @@ definitions:
         type: number
         format: uint64
         example: 1488
+      order_name:
+        type: string
+        example: "Сверстать сайт"
+        readOnly: true
+      user_login:
+        type: string
+        example: "AlexDarkStalker98"
+        readOnly: true
+      user_name_surname:
+        type: string
+        example: "AlexDarkStalker98"
+        readOnly: true
   Reviews:
     type: array
     items:
